Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22894

Mariabackup should not read [mariadb-client] option group from configuration files

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL), 10.5(EOL)
    • 10.5.4, 10.4.14
    • mariabackup
    • None

    Description

      The fix for MDEV-18215 / MDEV-21298 / MDEV-21301 improperly added the [mariadb-client] option group to Mariabackup's client option groups:

      https://github.com/MariaDB/server/blob/9bdf35e90f36d9be8cc7591e2ed5e62feadc5515/extra/mariabackup/xtrabackup.cc#L1628

      This is incorrect.

      The [mariadb-client] option group is used by the "mysql" / "mariadb" command-line client. The [mariadb-client] option group is not a "generic" client option group read by all client programs.

      Mariabackup should only read the "generic" client option groups listed in sql-common/client.c:

      https://github.com/MariaDB/server/blob/9bdf35e90f36d9be8cc7591e2ed5e62feadc5515/sql-common/client.c#L854

      Those option groups are:

      • [client]
      • [client-server]
      • [client-mariadb]

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.