MDEV-22894: Mariabackup should not read [mariadb-client] option group from configuration files